@@ -1,5 +1,7 @@
 package com.example.tradingbot.persistence.service;
 
+import static java.util.stream.Collectors.toList;
+
 import com.example.tradingbot.domain.model.core.instrument.Instrument;
 import com.example.tradingbot.mapping.InstrumentMapper;
 import com.example.tradingbot.persistence.repository.InstrumentRepository;
@@ -10,7 +12,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 /**
- * Граница domain ↔ persistence для {@link Instrument}.
+ * Граница domain ↔ persistence для {@link Instrument}. Здесь же —
+ * fetch-or-throw чтения ({@code getRequiredBy*}). Доменный enum статуса
+ * конвертируется в строку на границе репозитория.
  */
 @Service
 @RequiredArgsConstructor
@@ -21,26 +25,41 @@ public class InstrumentDataService {
 
     @Transactional
     public Instrument save(Instrument instrument) {
-        return mapper.entityToDomain(repository.save(mapper.domainToEntity(instrument)));
+        return mapper.persistenceToDomain(repository.save(mapper.domainToPersistence(instrument)));
     }
 
     @Transactional(readOnly = true)
     public Optional<Instrument> findById(Long id) {
-        return repository.findById(id).map(mapper::entityToDomain);
+        return repository.findById(id).map(mapper::persistenceToDomain);
     }
 
     @Transactional(readOnly = true)
-    public Optional<Instrument> findByInternalId(String internalId) {
-        return repository.findByInternalId(internalId).map(mapper::entityToDomain);
+    public Instrument getRequiredById(Long id) {
+        return findById(id).orElseThrow(() -> new IllegalArgumentException("Instrument not found: " + id));
+    }
+
+    /**
+     * Инструмент вместе с группами свечей (join fetch) — для проверок,
+     * которым нужны группы (например {@code isReadyForActivation}).
+     */
+    @Transactional(readOnly = true)
+    public Instrument getRequiredByIdWithCandleGroups(Long id) {
+        return repository.findByIdWithCandleGroups(id)
+                .map(mapper::persistenceToDomainWithCandleGroups)
+                .orElseThrow(() -> new IllegalArgumentException("Instrument not found: " + id));
     }
 
     @Transactional(readOnly = true)
-    public Optional<Instrument> findByExchangeIdAndExternalId(Long exchangeId, String externalId) {
-        return repository.findByExchangeIdAndExternalId(exchangeId, externalId).map(mapper::entityToDomain);
+    public Instrument getRequiredByInternalId(String internalId) {
+        return repository.findByInternalId(internalId)
+                .map(mapper::persistenceToDomain)
+                .orElseThrow(() -> new IllegalArgumentException("Instrument not found: " + internalId));
     }
 
     @Transactional(readOnly = true)
     public List<Instrument> findByStatus(Instrument.Status status) {
-        return repository.findByStatus(status).stream().map(mapper::entityToDomain).toList();
+        return repository.findByStatus(status.name()).stream()
+                .map(mapper::persistenceToDomain)
+                .collect(toList());
     }
 }
